unpackaged/main/default/objects/GT_Meeting_Room__c/GT_Meeting_Room__c.object-meta.xml
<CustomObject>
    <description>This will be the Meeting Room object for all accounts in Generic Template</description>
    <label>Meeting Room</label>
    <nameField>
        <displayFormat>MR-{00000}</displayFormat>
        <label>Meeting Room</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Rooms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>