unpackaged/main/default/objects/GT_Meeting_Room__c/fields/AE_Phone__c.field-meta.xml
<CustomField>
    <fullName>AE_Phone__c</fullName>
    <label>GES AE Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>