unpackaged/main/default/objects/GT_Meeting_Room__c/fields/Agency_Contact_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact_E_mail__c</fullName>
    <label>Agency Contact E-mail</label>
    <type>Email</type>
</CustomField>