unpackaged/main/default/objects/GT_Meeting_Room__c/fields/AM_e_mail__c.field-meta.xml
<CustomField>
    <fullName>AM_e_mail__c</fullName>
    <label>GES AM e-mail</label>
    <type>Email</type>
</CustomField>