unpackaged/main/default/objects/GT_Meeting_Room__c/fields/Day_1_Open_date_time__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Open_date_time__c</fullName>
    <label>Day 1 - Open Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>