unpackaged/main/default/objects/GT_Meeting_Room__c/fields/Day_3_Close_date_time__c.field-meta.xml
<CustomField>
    <fullName>Day_3_Close_date_time__c</fullName>
    <label>Day 3 - Close Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>