unpackaged/main/default/objects/GT_Meeting_Room__c/fields/F_B_Notes__c.field-meta.xml
<CustomField>
    <fullName>F_B_Notes__c</fullName>
    <label>F&amp;B Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>