unpackaged/main/default/objects/GT_Meeting_Room__c/fields/GES_Congress_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Congress_Manager__c</fullName>
    <label>GES Congress Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manager 1</fullName>
            </value>
            <value>
                <fullName>Manager 2</fullName>
            </value>
            <value>
                <fullName>Manager 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>