unpackaged/main/default/objects/GT_Meeting_Room__c/fields/GES_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>GES_Project_Number__c</fullName>
    <label>GES Project Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>