unpackaged/main/default/objects/GT_Meeting_Room__c/fields/GES_Project_Number_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>GES_Project_Number_CrownCastle__c</fullName>
    <inlineHelpText>Please use the full nine digit project number.</inlineHelpText>
    <label>GES Project Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>