unpackaged/main/default/objects/GT_Meeting_Room__c/fields/I_D_Name_Other__c.field-meta.xml
<CustomField>
    <fullName>I_D_Name_Other__c</fullName>
    <inlineHelpText>Required when &#39;I&amp;D Supervisor&#39; is &#39;Other&#39;</inlineHelpText>
    <label>I&amp;D Name (Other)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>