unpackaged/main/default/objects/GT_Meeting_Room__c/fields/I_D_Supervisor_Email_Auto__c.field-meta.xml
<CustomField>
    <fullName>I_D_Supervisor_Email_Auto__c</fullName>
    <formula>IF((TEXT(I_D_Supervisor__c) == &quot;Gary Vanderpol&quot;),&quot;GVanderpol@ges.com&quot;, 
IF((TEXT(I_D_Supervisor__c) == &quot;Kari Storm&quot;),&quot;KStorm@ges.com&quot;, 
IF((TEXT(I_D_Supervisor__c) == &quot;Scott Mattson&quot;),&quot;SMattson@ges.com&quot;, 
IF((TEXT(I_D_Supervisor__c) == &quot;Don Hadrava&quot;),&quot;dhadrava@ges.com&quot;, 
IF((TEXT(I_D_Supervisor__c) == &quot;Dennis Skarupa&quot;),&quot; &quot;,
IF((TEXT(I_D_Supervisor__c) == &quot;Steve Burgess&quot;),&quot;Sburgess@ges.com&quot;, 
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I &amp; D Supervisor Email</label>
    <type>Text</type>
</CustomField>