unpackaged/main/default/objects/GT_Meeting_Room__c/fields/Meeting_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Name__c</fullName>
    <label>Meeting Room Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>