unpackaged/main/default/objects/GT_Meeting_Room__c/fields/Meeting_Room_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Name_Number__c</fullName>
    <label>Room Name/Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>