unpackaged/main/default/objects/GT_Meeting_Room__c/fields/Meeting_Room_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Notes__c</fullName>
    <label>Meeting Room Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>