unpackaged/main/default/objects/GT_Meeting_Room__c/fields/Meeting_Room_Notes_old__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_Notes_old__c</fullName>
    <label>Meeting Room Notes</label>
    <type>TextArea</type>
</CustomField>