unpackaged/main/default/objects/GT_Meeting_Room__c/recordTypes/Meeting_Room_CC.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Room_CC</fullName>
    <active>true</active>
    <description>Meeting Room for CC</description>
    <label>Meeting Room CC</label>
</RecordType>