unpackaged/main/default/objects/GT_Meeting_Room__c/recordTypes/Meeting_Room_GT.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Room_GT</fullName>
    <active>true</active>
    <description>Meeting Room for GT</description>
    <label>Meeting Room GT</label>
</RecordType>