unpackaged/main/default/objects/GT_Meeting_Room__c/recordTypes/Meeting_Room_Merck.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Room_Merck</fullName>
    <active>true</active>
    <label>Meeting Room Merck</label>
</RecordType>