unpackaged/main/default/objects/GT_Meeting_Room__c/recordTypes/Meeting_Room_NNI.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Room_NNI</fullName>
    <active>true</active>
    <description>Meeting Room for NNI</description>
    <label>Meeting Room NNI</label>
</RecordType>