unpackaged/main/default/objects/GT_Meeting_Room__c/recordTypes/Meeting_Room_Pharma.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Room_Pharma</fullName>
    <active>true</active>
    <label>Meeting Room Pharma</label>
</RecordType>