unpackaged/main/default/objects/GT_Meeting_Room__c/recordTypes/Meeting_Room_Sig_Sauer.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Room_Sig_Sauer</fullName>
    <active>true</active>
    <label>Meeting Room Sig Sauer</label>
</RecordType>